fix issues with overflowing content in the window getting scrollbars

--- a/layout.css
+++ b/layout.css
@@ -14,6 +14,11 @@
  * is IE6 which will just hide the navigation block completely in these
  * instances due to a positioning bug.
  */
+ 
+/* fix possible issue with scrollbars on content inside of the content window */
+body{
+  overflow:hidden;
+}
 
 #content,
 #sidebar-first,
